# m0n1t0r

./: .env  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.example.toml  config.toml  diesel.toml  entrypoint.sh  todo
.cargo/: config.toml
.github/workflows/: build.yml  docker.yml  general.yml  macos.yml  ubuntu.yml  windows-uac.yml  windows-ui-debug.yml  windows-ui-release.yml  windows-ui.yml  windows.yml
certs/: cert.ext  generate.sh
m0n1t0r-build/: Cargo.toml
m0n1t0r-build/src/: cert.rs  config.rs  dep.rs  lib.rs  version.rs
m0n1t0r-client/: Cargo.toml  build.rs
m0n1t0r-client/m0n1t0r-cpp-general-lib/: .gitignore  xmake.lua
m0n1t0r-client/m0n1t0r-cpp-general-lib/include/: error.h  init.h
m0n1t0r-client/m0n1t0r-cpp-general-lib/src/: init.cpp
m0n1t0r-client/m0n1t0r-cpp-windows-lib/: .gitignore  xmake.lua
m0n1t0r-client/m0n1t0r-cpp-windows-lib/include/: autorun.h  blind.h  charset.h  convertor.h  error.h  global.h  mod.rs.h  process.h  shadowsyscall.hpp  voidgate.h
m0n1t0r-client/m0n1t0r-cpp-windows-lib/src/: autorun.cpp  blind.cpp  charset.cpp  convertor.cpp  main.cpp  process.cpp  voidgate.cpp
m0n1t0r-client/m0n1t0r-cpp-windows-lib/src/rs/: process.rs.cc
m0n1t0r-client/src/: init.rs  lib.rs  main.rs
m0n1t0r-client/src/client/: agent.rs  agent_macro.rs  macro.rs  mod.rs
m0n1t0r-client/src/client/file/: mod.rs
m0n1t0r-client/src/client/fs/: mod.rs
m0n1t0r-client/src/client/general/: mod.rs
m0n1t0r-client/src/client/network/: mod.rs
m0n1t0r-client/src/client/process/: mod.rs
m0n1t0r-client/src/client/process/general/: mod.rs
m0n1t0r-client/src/client/process/windows/: mod.rs
m0n1t0r-client/src/client/proxy/: mod.rs
m0n1t0r-client/src/client/unix/: autorun.rs  mod.rs
m0n1t0r-client/src/client/windows/: autorun.rs  blind.rs  charset.rs  fs.rs  mod.rs  process.rs
m0n1t0r-client/src/conn/: mod.rs
m0n1t0r-client/xmake/: ffi.lua  shellcode.lua
m0n1t0r-common/: Cargo.toml  build.rs
m0n1t0r-common/src/: config.rs  error.rs  lib.rs
m0n1t0r-common/src/autorun/: mod.rs
m0n1t0r-common/src/blind/: mod.rs
m0n1t0r-common/src/charset/: mod.rs
m0n1t0r-common/src/client/: info.rs  mod.rs
m0n1t0r-common/src/file/: mod.rs
m0n1t0r-common/src/fs/: mod.rs
m0n1t0r-common/src/info/: mod.rs
m0n1t0r-common/src/network/: mod.rs
m0n1t0r-common/src/process/: execute.rs  interactive.rs  list.rs  mod.rs
m0n1t0r-common/src/proxy/: mod.rs
m0n1t0r-common/src/qq/: mod.rs  util.rs
m0n1t0r-common/src/rd/: mod.rs
m0n1t0r-common/src/screen/: mod.rs
m0n1t0r-common/src/server/: mod.rs
m0n1t0r-common/src/util/: discriminant.rs  mod.rs  network.rs  shell.rs  time.rs  update.rs  version.rs
m0n1t0r-cpp-windows-lib/: xmake.lua
m0n1t0r-macro/: Cargo.toml
m0n1t0r-macro/src/: lib.rs
m0n1t0r-sdk/: .gitignore  xmake.lua
m0n1t0r-sdk-cpp/: xmake.lua
m0n1t0r-sdk-cpp/include/: m0n1t0r-sdk.h
m0n1t0r-sdk-cpp/src/: client.cpp  common.cpp  common.h
m0n1t0r-sdk-cpp/src/client/: base.cpp  environment.cpp  file.cpp  info.cpp  network.cpp  notify.cpp  process.cpp  proxy.cpp  qq.cpp  terminate.cpp  update.cpp
m0n1t0r-sdk-cpp/src/server/: base.cpp  notify.cpp  proxy.cpp
m0n1t0r-sdk-cpp/src/test/: enumerate_client.cpp  enumerate_environment.cpp  enumerate_file.cpp  enumerate_process.cpp  enumerate_qq.cpp  get_client_detail.cpp  get_file_info.cpp  get_server_detail.cpp  proxy_socks5_pass.cpp  test.h
m0n1t0r-sdk-cpp/xmake/: package.lua  xmake.lua
m0n1t0r-sdk/include/: m0n1t0r-sdk.h
m0n1t0r-sdk/src/: client.cpp  main.cpp  server.cpp
m0n1t0r-sdk/xmake/: package.lua
m0n1t0r-server/: Cargo.toml  build.rs
m0n1t0r-server/src/: lib.rs  main.rs
m0n1t0r-server/src/conn/: mod.rs
m0n1t0r-server/src/server/: debug.rs  mod.rs
m0n1t0r-server/src/web/: error.rs  mod.rs  response.rs  util.rs
m0n1t0r-server/src/web/api/: README.md  auth.rs  global.rs  index.rs  mod.rs  session.rs
m0n1t0r-server/src/web/api/client/: client.rs  count.rs  detail.rs  environment.rs  file.rs  fs.rs  info.rs  mod.rs  notification.rs  notify.rs  terminate.rs  update.rs
m0n1t0r-server/src/web/api/client/autorun/: infect.rs  infectious.rs  mod.rs
m0n1t0r-server/src/web/api/client/network/: download.rs  mod.rs
m0n1t0r-server/src/web/api/client/process/: execute.rs  interactive.rs  mod.rs
m0n1t0r-server/src/web/api/client/proxy/: forward.rs  mod.rs  socks5.rs
m0n1t0r-server/src/web/api/client/qq/: friend.rs  mod.rs  url.rs
m0n1t0r-server/src/web/api/client/rd/: mod.rs  stream.rs
m0n1t0r-server/src/web/api/client/screen/: mod.rs
m0n1t0r-server/src/web/api/server/: mod.rs  notification.rs  notify.rs  proxy.rs
m0n1t0r-ui/: xmake.lua
m0n1t0r-ui/include/Model/: ClientTableModel.h  ProcessModel.h
m0n1t0r-ui/include/Subscriber/: ConnectionSubscriber.h
m0n1t0r-ui/include/Util/: IpInfo.h  Log.h
m0n1t0r-ui/include/Widget/: ClientTab.h  FileTree.h  InteractiveShellTab.h  ProcessTable.h  RemoteDesktopWidget.h  ServerTab.h
m0n1t0r-ui/include/Window/: ClientWindow.h  ConnectDialog.h  MainWindow.h
m0n1t0r-ui/include/common/: client.h  fs.h  ip.h
m0n1t0r-ui/include/model/: directory_model.h  overview_model.h  process_model.h
m0n1t0r-ui/include/network/: client.h  ip.h
m0n1t0r-ui/include/widget/: client_tab.h  filetree.h  fileview.h  main_tab.h  process_table.h
m0n1t0r-ui/include/window/: client.h  connect.h  main.h
m0n1t0r-ui/src/: main.cpp
m0n1t0r-ui/src/Model/: ClientTableModel.cpp  ProcessModel.cpp
m0n1t0r-ui/src/Subscriber/: ConnectionSubscriber.cpp
m0n1t0r-ui/src/Util/: IpInfo.cpp  Log.cpp
m0n1t0r-ui/src/Widget/: ClientTab.cpp  ClientTab.ui  FileTree.cpp  FileTree.ui  InteractiveShellTab.cpp  InteractiveShellTab.ui  ProcessTable.cpp  ProcessTable.ui  RemoteDesktopWidget.cpp  RemoteDesktopWidget.ui  ServerTab.cpp  ServerTab.ui
m0n1t0r-ui/src/Window/: ClientWindow.cpp  ClientWindow.ui  ConnectDialog.cpp  ConnectDialog.ui  (+2 more)
m0n1t0r-ui/xmake/: package.lua  xmake.lua
m0n1t0r-xmake/: xmake.lua
public/: index.html
public/script/: util.js  version.js
xtask/: Cargo.toml  build.rs
xtask/src/: main.rs
(+25 files in other folders)
