[workspace]
resolver = "2"
members = [
    "m0n1t0r-client",
    "m0n1t0r-server",
    "m0n1t0r-common",
    "xtask", "m0n1t0r-build",
]

[workspace.package]
version = "1.1.0"
authors = ["Miyamizu Mitsuha"]
description = "m0n1t0r RAT"
readme = "README.md"
repository = "https://github.com/MMitsuha/m0n1t0r"
edition = "2024"

[profile.release]
strip = "symbols"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
