[package]
name = "m0n1t0r-client"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
edition = "2024"
repository.workspace = true
build = "build.rs"

[features]
default = ["general"]
general = []
windows = []
linux = []
macos = []

[dependencies]
actix-web = { version = "4.9.0", features = ["secure-cookies"] }
anyhow = "1.0.97"
remoc = { git = "https://github.com/MMitsuha/remoc.git", branch = "stable",  features = ["full", "codec-message-pack", "default-codec-message-pack", "rmp-serde"], default-features = false }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.13"
m0n1t0r-common = { path = "../m0n1t0r-common" }
log = "0.4.26"
flexi_logger = { version = "0.29.8", features = ["async"] }
cfg_block = "0.2.0"
cxx = "1.0.143"
tokio-rustls = { version = "0.26.2", features = ["ring", "logging", "tls12"], default-features = false }
rustls = { version = "0.23.23", features = ["ring", "log", "logging", "std", "tls12"], default-features = false }
rustls-pemfile = "2.2.0"
rustls-pki-types = { version = "1.11.0", features = ["alloc"] }
paste = "1.0.15"
quote = "1.0.39"
qqkey = { path = "../deps/qqkey" }
directories = "6.0.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winbase"] }

[build-dependencies]
xmake = { version = "0.2", git = "https://github.com/MMitsuha/xmake-rs.git" }
cxx-build = "1.0.143"
cargo-emit = "0.2.1"
vergen = { version = "9.0.4", features = ["build", "cargo", "rustc", "si"] }
m0n1t0r-build = { path = "../m0n1t0r-build" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
