[package]
name = "m0n1t0r-client"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
edition = "2024"
repository.workspace = true
build = "build.rs"

[features]
general = []
winnt = []
winnt-uac = [ "winnt" ]
linux = []
macos = []

[dependencies]
anyhow = "1.0.98"
remoc = { version = "0.15.6", features = ["full", "codec-message-pack", "default-codec-message-pack", "rmp-serde"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = "0.7.15"
m0n1t0r-common = { path = "../m0n1t0r-common" }
log = "0.4.27"
flexi_logger = { version = "0.31.2", features = ["async"] }
cfg_block = "0.2.0"
cxx = "1.0.160"
tokio-rustls = { version = "0.26.2", features = ["ring", "logging", "tls12"], default-features = false }
rustls = { version = "0.23.29", features = ["ring", "log", "logging", "std", "tls12"], default-features = false }
rustls-pki-types = { version = "1.12.0", features = ["alloc"] }
directories = "6.0.0"
chrono = { version = "0.4.42", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winbase"] }
windows = { version = "0.62.2", features = ["Win32_Storage_FileSystem"] }
bit-iter = "1.3.1"

[build-dependencies]
xmake = { version = "0.3.4", git = "https://github.com/MMitsuha/xmake-rs.git" }
cxx-build = "1.0.160"
m0n1t0r-build = { path = "../m0n1t0r-build" }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
