[package]
name = "m0n1t0r-common"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
edition = "2024"
repository.workspace = true
build = "build.rs"

[dependencies]
anyhow = "1.0.97"
remoc = { git = "https://github.com/MMitsuha/remoc.git", branch = "stable",  features = ["full", "codec-message-pack", "default-codec-message-pack", "rmp-serde"], default-features = false }
serde = { version = "1.0.218", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.13"
shell-words = "1.1.0"
rsntp = "4.0.0"
chrono = "0.4.40"
log = "0.4.26"
serde-error = "0.1.3"
sysinfo = "0.33.1"
reqwest = { version = "0.12.12", features = ["json"] }
url = { version = "2.5.4", features = ["serde"] }
self-replace = "1.5.0"
cxx = "1.0.143"
m0n1t0r-macro = { path = "../m0n1t0r-macro" }
rmp-serde = "1.3.0"
async-compression = { version = "0.4.20", features = ["lzma", "tokio"] }
futures = "0.3.31"
async-channel = "2.3.1"
async_channel_io = "0.3.0"
async-compat = "0.2.4"
async-stream = "0.3.6"
rustls = { version = "0.23.23", features = ["ring", "log", "logging", "std", "tls12"], default-features = false }
ring-channel = "0.12.0"
rayon = "1.10.0"
qqkey = { path = "../deps/qqkey" }

[build-dependencies]
cargo-emit = "0.2.1"
vergen = { version = "9.0.4", features = ["build", "cargo", "rustc", "si"] }
m0n1t0r-build = { path = "../m0n1t0r-build" }
