[package]
name = "m0n1t0r-common"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
edition = "2024"
repository.workspace = true
build = "build.rs"

[dependencies]
anyhow = "1.0.98"
remoc = { version = "0.15.6", features = ["full", "codec-message-pack", "default-codec-message-pack", "rmp-serde"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = "0.7.15"
shell-words = "1.1.0"
rsntp = "4.0.0"
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.27"
serde-error = "0.1.3"
sysinfo = "0.36.0"
reqwest = { version = "0.12.22", features = ["json"] }
url = { version = "2.5.4", features = ["serde"] }
self-replace = "1.5.0"
cxx = "1.0.160"
rmp-serde = "1.3.0"
async-compression = { version = "0.4.27", features = ["lzma", "tokio"] }
futures = "0.3.31"
async-channel = "2.5.0"
async_channel_io = "0.3.0"
async-compat = "0.2.4"
async-stream = "0.3.6"
rustls = { version = "0.23.29", features = ["ring", "log", "logging", "std", "tls12"], default-features = false }
ring-channel = "0.12.0"
rayon = "1.10.0"
qqkey = { path = "../deps/qqkey" }

[build-dependencies]
cargo-emit = "0.2.1"
vergen = { version = "9.0.6", features = ["build", "cargo", "rustc", "si"] }
m0n1t0r-build = { path = "../m0n1t0r-build" }
