[package]
name = "m0n1t0r-common"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
edition = "2024"
repository.workspace = true
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
remoc = { version = "0.18.3", features = ["full", "codec-message-pack", "default-codec-message-pack", "rmp-serde"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.16"
shell-words = "1.1.0"
rsntp = "4.0.0"
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.28"
serde-error = "0.1.3"
sysinfo = "0.37.2"
reqwest = { version = "0.12.24", features = ["json"] }
url = { version = "2.5.7", features = ["serde"] }
self-replace = "1.5.0"
cxx = "1.0.187"
rmp-serde = "1.3.0"
async-compression = { version = "0.4.32", features = ["lzma", "tokio"] }
futures = "0.3.31"
async-channel = "2.5.0"
async_channel_io = "0.3.0"
async-compat = "0.2.5"
async-stream = "0.3.6"
rustls = { version = "0.23.34", features = ["ring", "log", "logging", "std", "tls12"], default-features = false }
ring-channel = "0.12.0"
rayon = "1.11.0"
qqkey = { path = "../deps/qqkey" }
scrap = { path = "../deps/scrap", features = ["wayland"] }
hbb_common = { git = "https://github.com/rustdesk/hbb_common" }

[build-dependencies]
cargo-emit = "0.2.1"
vergen = { version = "9.0.6", features = ["build", "cargo", "rustc", "si"] }
m0n1t0r-build = { path = "../m0n1t0r-build" }
