[package]
name = "m0n1t0r-server"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
edition = "2024"
repository.workspace = true

[dependencies]
actix-web = { version = "4.11.0", features = ["secure-cookies", "http2", "rustls-0_23"] }
anyhow = "1.0.98"
remoc = { version = "0.15.6", features = ["full", "codec-message-pack", "default-codec-message-pack", "rmp-serde"], default-features = false }
reqwest = { version = "0.12.22", features = ["cookies", "json", "socks"] }
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = "0.7.15"
m0n1t0r-common = { path = "../m0n1t0r-common" }
m0n1t0r-macro = { path = "../m0n1t0r-macro" }
log = "0.4.27"
flexi_logger = { version = "0.31.2", features = ["async"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
serde_with = "3.14.0"
serde-error = "0.1.3"
actix-ws = "0.3.0"
shell-words = "1.1.0"
socks5-impl = { version = "0.7.2", features = ["client", "serde", "server", "tokio"] }
as-any = "0.3.2"
url = { version = "2.5.4", features = ["serde"] }
tokio-rustls = { version = "0.26.2", features = ["ring", "logging", "tls12"], default-features = false }
rustls = { version = "0.23.29", features = ["ring", "log", "logging", "std", "tls12"], default-features = false }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
rmp-serde = "1.3.0"
async-compression = { version = "0.4.27", features = ["lzma", "tokio"] }
async-channel = "2.5.0"
async_channel_io = "0.3.0"
async-compat = "0.2.4"
tokio-stream = "0.1.17"
libsw = "3.5.0"
serde_repr = "0.1.20"
rayon = "1.10.0"
async_fn_traits = "0.1.1"
itertools = "0.14.0"
qqkey = { path = "../deps/qqkey" }
lazy_static = "1.5.0"
scopeguard = "1.2.0"
actix-multipart = "0.7.2"
actix-files = "0.6.6"
discriminant-rs = "0.1.2"
actix-cors = "0.7.1"
diesel = { version = "2.2.12", features = ["postgres"] }
dotenvy = "0.15.7"
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
slotmap = { version = "1.0", features = ["serde"] }
