[package]
name = "m0n1t0r-server"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
edition = "2024"
repository.workspace = true
build = "build.rs"

[features]
general = []
winnt = []
linux = []
macos = []

[dependencies]
actix-web = { version = "4.11.0", features = ["secure-cookies", "http2", "rustls-0_23"] }
anyhow = "1.0.100"
remoc = { version = "0.18.3", features = ["full", "codec-message-pack", "default-codec-message-pack", "rmp-serde"], default-features = false }
reqwest = { version = "0.12.24", features = ["cookies", "json", "socks"] }
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.16"
m0n1t0r-common = { path = "../m0n1t0r-common" }
log = "0.4.28"
flexi_logger = { version = "0.31.7", features = ["async"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
serde_with = "3.15.1"
serde-error = "0.1.3"
actix-ws = "0.3.0"
shell-words = "1.1.0"
socks5-impl = { version = "0.7.2", features = ["client", "serde", "server", "tokio"] }
as-any = "0.3.2"
url = { version = "2.5.7", features = ["serde"] }
tokio-rustls = { version = "0.26.4", features = ["ring", "logging", "tls12"], default-features = false }
rustls = { version = "0.23.34", features = ["ring", "log", "logging", "std", "tls12"], default-features = false }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
rmp-serde = "1.3.0"
async-compression = { version = "0.4.32", features = ["lzma", "tokio"] }
async-channel = "2.5.0"
async_channel_io = "0.3.0"
async-compat = "0.2.5"
tokio-stream = "0.1.17"
libsw = "3.5.0"
serde_repr = "0.1.20"
rayon = "1.11.0"
async_fn_traits = "0.1.1"
itertools = "0.14.0"
qqkey = { path = "../deps/qqkey" }
lazy_static = "1.5.0"
scopeguard = "1.2.0"
actix-multipart = "0.7.2"
actix-files = "0.6.8"
discriminant-rs = "0.1.2"
actix-cors = "0.7.1"
dotenvy = "0.15.7"
actix-identity = "0.9.0"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
slotmap = { version = "1.0.7", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
scrap = { path = "../deps/scrap", features = ["wayland"] }
hbb_common = { git = "https://github.com/rustdesk/hbb_common" }
ffmpeg-next = "8.0.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
winapi = { version = "0.3.9", features = ["winbase"] }
