[package]
name = "xtask"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
edition.workspace = true

[features]
general = []
winnt = []
linux = []
macos = []

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
log = "0.4.25"
flexi_logger = { version = "0.31.8" }
anyhow = "1.0.95"
m0n1t0r-build = { path = "../m0n1t0r-build" }
m0n1t0r-common = { path = "../m0n1t0r-common" }
dialoguer = "0.11"
rcgen = "0.13"
time = "0.3"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
